--- a/Items.html
+++ b/Items.html
@@ -3,6 +3,8 @@
     <title>Items list</title>
     <meta charset="utf-8">
   </head>
+
+<a href="dddfraser.github.io/index/html">Index Page</a>
   <body>
     <h1>Items to buy</h1>
     <ul>
@@ -21,14 +23,14 @@
 
 
     <ul>
-          <h3>Drink</h3>
+    <h3>Drink</h3>
       <li>Lacroix</li>
     </ul>
 
 
 
     <ul>
-        <h3>Cleaning</h3>
+    <h3>Cleaning</h3>
       <li>steel wool</li>
       <li>sponges</li>
       <li>gloves</li>
