--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
   </head>
+  <a href="dddfraser.github.io/Items.html">Items Page</a>
   <body>
     <h1>I'm an h1</h1>
     <ul>
