--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>I'm an h1</h1>
     <ul>
 <li>
-<a href="https://example.com/" style="color: red;">Link</a>
+<a href="https://example.com/" style="color: blue;">Link</a>
 </li> <li>
-<a href="https://example.com/" style="color: red;">Link</a> </li>
+<a href="https://example.com/" style="color: blue;">Link</a> </li>
 <li>
 <a href="https://example.com/" style="color: red;">Link</a>
 </li> </ul>
