--- a/index.html
+++ b/index.html
@@ -3,28 +3,58 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
-  </head>
+    <style>
+    a{color: red;
+    }
+    div{
+      border: 1px solid black;
+    }
+    div a{
+      color: green;
+    }
+    li {
+      border: 1px solid blue;
+    }
+    li a{
+      color: purple;
+    }
+    .bio-box {
+      background-color: grey;
+    }
+    .bling {
+      background-color: azure;
+    }
+    .call-to-action {
+      background-color: orange;
+    }
+    </style>
+</head>
   <a href="https://dddfraser.github.io/github.io/items.html">Items Page</a>
   <body>
     <h1>I'm an h1</h1>
     <ul>
-<li>
-<a href="https://example.com/" style="color: blue;">Link</a>
-</li> <li>
-<a href="https://example.com/" style="color: blue;">Link</a> </li>
-<li>
-<a href="https://example.com/" style="color: red;">Link</a>
-</li> </ul>
+      <li>
+        <a href="https://example.com/" >Link</a>
+      </li>
+      <li>
+        <a href="https://example.com/">Link</a>
+      </li>
+      <li>
+        <a href="https://example.com/">Link</a>
+      </li>
+      </ul>
     <h2>I'm an h2</h2>
-    <div style="border: 1px solid black;">
-<a href="https://example.com/" style="color: green;">I'm a link</a> </div>
-<div style="border: 1px solid black;">
+    <div class="bling" >
 <a href="https://example.com/" style="color: green;">I'm a link</a>
     </div>
-    <div style="border: 1px solid black;">
+    <div class="bio-box", "bling">
 <a href="https://example.com/" style="color: green;">I'm a link</a>
-</div>
-<div style="border: 1px solid black;">
-<a href="https://example.com/" style="color: green;">I'm a link</a> </div>
-</body>
+    </div>
+    <div class="call-to-action">
+<a href="https://example.com/" style="color: green;">I'm a link</a>
+    </div>
+    <div>
+<a href="https://example.com/" style="color: green;">I'm a link</a>
+    </div>
+  </body>
 </html>
